--- a/UICanvas/ScreenControl.xaml
+++ b/UICanvas/ScreenControl.xaml
@@ -42,7 +42,9 @@
 					   Height="{Binding Screen.Height, ElementName=Control}"
 					   Width="{Binding Screen.Width, ElementName=Control}"
 					   MinWidth="0"
-					   MinHeight="0">
+					   MinHeight="0"
+					   HorizontalAlignment="Left"
+					   VerticalAlignment="Top">
 			</InkCanvas>
 			<Grid Grid.Row="2">
 				<Grid.ColumnDefinitions>
