visual representations of actions point to the center of the target screen instead of its top-left corner

--- a/UICanvas/CanvasControl.xaml
+++ b/UICanvas/CanvasControl.xaml
@@ -46,7 +46,7 @@
 						  StrokeThickness="7">
 						<Path.Data>
 							<LineGeometry StartPoint="{Binding AbsolutePosition}"
-										  EndPoint="{Binding Target.Position}">
+										  EndPoint="{Binding Target.CenterPosition}">
 							</LineGeometry>
 						</Path.Data>
 					</Path>
